--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,43 @@
+############################
+# Python backend
+
 back/env/
 __pycache__/
 *.pyc
+
+############################
+# Frontend build & deps
+
+frontend/node_modules/
+frontend/dist/
+frontend/dist-ssr/
+frontend/.env
+
+############################
+# Logs
+
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+############################
+# Local / temp
+
+*.local
+
+############################
+# Editor / IDE
+
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
